Implemented test framework, UI and Swagger documentation. Confirmed full functionality via automated test scripts and end user testing.
